--- a/docs/_static/styles/global/_theme.scss
+++ b/docs/_static/styles/global/_theme.scss
@@ -1,8 +1,14 @@
+// Breakpoints
+
 $breakpoint-sm: 576px;
 $breakpoint-md: 768px;
 $breakpoint-lg: 992px;
 $breakpoint-xl: 1200px;
 $breakpoint-xxl: 1400px;
+
+$breakpoint-laptop: 1024px;
+
+// Style properties
 
 $text-color: #082e41;
 $highlight-color: #00718b;
